4362 Detect new rows by content instead of position in the v2 New Row triggers