@@ -20,19 +20,19 @@ import static com.bytechef.component.microsoft.excel.constant.MicrosoftExcelCons
 import static com.bytechef.component.microsoft.excel.constant.MicrosoftExcelConstants.WORKBOOK_ID;
 import static com.bytechef.component.microsoft.excel.constant.MicrosoftExcelConstants.WORKSHEET_NAME;
 import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.mockito.ArgumentCaptor.forClass;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.mockStatic;
 
 import com.bytechef.component.definition.Parameters;
 import com.bytechef.component.definition.TriggerContext;
 import com.bytechef.component.definition.TriggerDefinition.PollOutput;
+import com.bytechef.component.microsoft.excel.util.MicrosoftExcelRowDiffUtils;
 import com.bytechef.component.microsoft.excel.util.MicrosoftExcelUtils;
 import com.bytechef.component.test.definition.MockParametersFactory;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
-import org.mockito.ArgumentCaptor;
 import org.mockito.MockedStatic;
 
 /**
@@ -40,97 +40,123 @@ import org.mockito.MockedStatic;
  */
 class MicrosoftExcelNewRowTriggerV2Test {
 
+    private static final List<Object> HEADER_ROW = List.of("h1", "h2");
+    private static final List<Object> ROW_1 = List.of("a1", "a2");
+    private static final List<Object> ROW_2 = List.of("b1", "b2");
+    private static final List<Object> ROW_3 = List.of("c1", "c2");
+    private static final List<Object> INSERTED_ROW = List.of("x1", "x2");
+
     private final Parameters mockedInputParameters = MockParametersFactory.create(
-        Map.of(WORKBOOK_ID, 1, WORKSHEET_NAME, "test", IS_THE_FIRST_ROW_HEADER, true));
+        Map.of(WORKBOOK_ID, 1, WORKSHEET_NAME, "test", IS_THE_FIRST_ROW_HEADER, false));
     private final TriggerContext mockedTriggerContext = mock(TriggerContext.class);
-    private final ArgumentCaptor<Parameters> parametersArgumentCaptor = forClass(Parameters.class);
-    private final ArgumentCaptor<TriggerContext> triggerContextArgumentCaptor = forClass(TriggerContext.class);
 
     @Test
     void testPollOnFirstRunReturnsAllRowsAsNew() {
-        List<Object> row1 = List.of("abc", "sheetName", false);
-        List<Object> row2 = List.of("def", "sheetName2", true);
-        Map<String, Object> map1 = Map.of("key", "value1");
-        Map<String, Object> map2 = Map.of("key", "value2");
-        Parameters mockedClosureParameters = MockParametersFactory.create(Map.of());
+        PollOutput result = executePoll(List.of(ROW_1, ROW_2), List.of(), List.of(ROW_1, ROW_2));
 
-        try (MockedStatic<MicrosoftExcelUtils> microsoftExcelUtilsMockedStatic = mockStatic(MicrosoftExcelUtils.class)) {
-            microsoftExcelUtilsMockedStatic
-                .when(() -> MicrosoftExcelUtils.getUsedRangeValues(
-                    parametersArgumentCaptor.capture(), triggerContextArgumentCaptor.capture()))
-                .thenReturn(List.of(row1, row2));
-            microsoftExcelUtilsMockedStatic
-                .when(() -> MicrosoftExcelUtils.getMapOfValuesForRow(mockedInputParameters, mockedTriggerContext, row1))
-                .thenReturn(map1);
-            microsoftExcelUtilsMockedStatic
-                .when(() -> MicrosoftExcelUtils.getMapOfValuesForRow(mockedInputParameters, mockedTriggerContext, row2))
-                .thenReturn(map2);
-
-            PollOutput result = MicrosoftExcelNewRowTriggerV2.poll(
-                mockedInputParameters, null, mockedClosureParameters, mockedTriggerContext);
-
-            assertEquals(
-                new PollOutput(List.of(map1, map2), Map.of("knownRowIds", List.of(1, 2)), false),
-                result);
-        }
+        assertEquals(List.of(mapOf(ROW_1), mapOf(ROW_2)), result.records());
+        assertEquals(Map.of("knownRowHashes", hashesOf(ROW_1, ROW_2)), result.closureParameters());
     }
 
     @Test
     void testPollDetectsRowAppendedAtBottom() {
-        List<Object> row1 = List.of("a1", "a2");
-        List<Object> row2 = List.of("b1", "b2");
-        List<Object> row3 = List.of("c1", "c2");
-        Map<String, Object> map3 = Map.of("key", "c");
-        Parameters mockedClosureParameters = MockParametersFactory.create(Map.of("knownRowIds", List.of(1, 2)));
+        PollOutput result = executePoll(
+            List.of(ROW_1, ROW_2, ROW_3), hashesOf(ROW_1, ROW_2), List.of(ROW_3));
 
-        try (MockedStatic<MicrosoftExcelUtils> microsoftExcelUtilsMockedStatic = mockStatic(MicrosoftExcelUtils.class)) {
-            microsoftExcelUtilsMockedStatic
-                .when(() -> MicrosoftExcelUtils.getUsedRangeValues(mockedInputParameters, mockedTriggerContext))
-                .thenReturn(List.of(row1, row2, row3));
-            microsoftExcelUtilsMockedStatic
-                .when(() -> MicrosoftExcelUtils.getMapOfValuesForRow(mockedInputParameters, mockedTriggerContext, row3))
-                .thenReturn(map3);
+        assertEquals(List.of(mapOf(ROW_3)), result.records());
+        assertEquals(Map.of("knownRowHashes", hashesOf(ROW_1, ROW_2, ROW_3)), result.closureParameters());
+    }
 
-            PollOutput result = MicrosoftExcelNewRowTriggerV2.poll(
-                mockedInputParameters, null, mockedClosureParameters, mockedTriggerContext);
+    @Test
+    void testPollDetectsRowInsertedInTheMiddle() {
+        PollOutput result = executePoll(
+            List.of(ROW_1, INSERTED_ROW, ROW_2, ROW_3), hashesOf(ROW_1, ROW_2, ROW_3), List.of(INSERTED_ROW));
 
-            assertEquals(
-                new PollOutput(List.of(map3), Map.of("knownRowIds", List.of(1, 2, 3)), false),
-                result);
-        }
+        assertEquals(List.of(mapOf(INSERTED_ROW)), result.records());
+        assertEquals(
+            Map.of("knownRowHashes", hashesOf(ROW_1, INSERTED_ROW, ROW_2, ROW_3)), result.closureParameters());
     }
 
     @Test
     void testPollDoesNotTriggerWhenExistingRowIsEdited() {
         List<Object> editedRow = List.of("a1-edited", "a2-edited");
-        Parameters mockedClosureParameters = MockParametersFactory.create(Map.of("knownRowIds", List.of(1)));
 
-        try (MockedStatic<MicrosoftExcelUtils> microsoftExcelUtilsMockedStatic = mockStatic(MicrosoftExcelUtils.class)) {
-            microsoftExcelUtilsMockedStatic
-                .when(() -> MicrosoftExcelUtils.getUsedRangeValues(mockedInputParameters, mockedTriggerContext))
-                .thenReturn(List.of(editedRow));
+        PollOutput result = executePoll(List.of(editedRow, ROW_2), hashesOf(ROW_1, ROW_2), List.of());
 
-            PollOutput result = MicrosoftExcelNewRowTriggerV2.poll(
-                mockedInputParameters, null, mockedClosureParameters, mockedTriggerContext);
-
-            assertEquals(new PollOutput(List.of(), Map.of("knownRowIds", List.of(1)), false), result);
-        }
+        assertEquals(List.of(), result.records());
+        assertEquals(Map.of("knownRowHashes", hashesOf(editedRow, ROW_2)), result.closureParameters());
     }
 
     @Test
-    void testPollSkipsEmptyRows() {
-        List<Object> emptyRow = List.of();
-        Parameters mockedClosureParameters = MockParametersFactory.create(Map.of());
+    void testPollSkipsRowsPaddedWithBlankCells() {
+        List<Object> blankRow = Arrays.asList("", null);
 
-        try (MockedStatic<MicrosoftExcelUtils> microsoftExcelUtilsMockedStatic = mockStatic(MicrosoftExcelUtils.class)) {
+        PollOutput result = executePoll(List.of(ROW_1, blankRow, ROW_2), List.of(), List.of(ROW_1, ROW_2));
+
+        assertEquals(List.of(mapOf(ROW_1), mapOf(ROW_2)), result.records());
+        assertEquals(Map.of("knownRowHashes", hashesOf(ROW_1, ROW_2)), result.closureParameters());
+    }
+
+    @Test
+    void testPollOnEmptyWorksheetReturnsNoRows() {
+        PollOutput result = executePoll(List.of(List.of("")), List.of(), List.of());
+
+        assertEquals(List.of(), result.records());
+        assertEquals(Map.of("knownRowHashes", List.of()), result.closureParameters());
+    }
+
+    @Test
+    void testPollSkipsHeaderRow() {
+        Parameters inputParameters = MockParametersFactory.create(
+            Map.of(WORKBOOK_ID, 1, WORKSHEET_NAME, "test", IS_THE_FIRST_ROW_HEADER, true));
+
+        PollOutput result = executePoll(
+            inputParameters, List.of(HEADER_ROW, ROW_1), List.of(), List.of(ROW_1), HEADER_ROW);
+
+        assertEquals(List.of(mapOf(ROW_1)), result.records());
+        assertEquals(Map.of("knownRowHashes", hashesOf(ROW_1)), result.closureParameters());
+    }
+
+    private PollOutput executePoll(
+        List<List<Object>> rows, List<String> knownRowHashes, List<List<Object>> mappedRows) {
+
+        return executePoll(mockedInputParameters, rows, knownRowHashes, mappedRows, List.of());
+    }
+
+    private PollOutput executePoll(
+        Parameters inputParameters, List<List<Object>> rows, List<String> knownRowHashes,
+        List<List<Object>> mappedRows, List<Object> headerRow) {
+
+        Parameters closureParameters = knownRowHashes.isEmpty()
+            ? MockParametersFactory.create(Map.of())
+            : MockParametersFactory.create(Map.of("knownRowHashes", knownRowHashes));
+
+        try (MockedStatic<MicrosoftExcelUtils> microsoftExcelUtilsMockedStatic =
+            mockStatic(MicrosoftExcelUtils.class)) {
+
             microsoftExcelUtilsMockedStatic
-                .when(() -> MicrosoftExcelUtils.getUsedRangeValues(mockedInputParameters, mockedTriggerContext))
-                .thenReturn(List.of(emptyRow));
+                .when(() -> MicrosoftExcelUtils.getUsedRangeValues(inputParameters, mockedTriggerContext))
+                .thenReturn(rows);
 
-            PollOutput result = MicrosoftExcelNewRowTriggerV2.poll(
-                mockedInputParameters, null, mockedClosureParameters, mockedTriggerContext);
+            for (List<Object> row : mappedRows) {
+                microsoftExcelUtilsMockedStatic
+                    .when(() -> MicrosoftExcelUtils.getMapOfValuesForRow(inputParameters, headerRow, row))
+                    .thenReturn(mapOf(row));
+            }
 
-            assertEquals(new PollOutput(List.of(), Map.of("knownRowIds", List.of()), false), result);
+            return MicrosoftExcelNewRowTriggerV2.poll(
+                inputParameters, null, closureParameters, mockedTriggerContext);
         }
+    }
+
+    private static Map<String, Object> mapOf(List<Object> row) {
+        return Map.of("row", row);
+    }
+
+    @SafeVarargs
+    private static List<String> hashesOf(List<Object>... rows) {
+        return Arrays.stream(rows)
+            .map(MicrosoftExcelRowDiffUtils::getRowHash)
+            .toList();
     }
 }
